--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -9,6 +9,11 @@
             document.loginForm.action = "/loginCheck.do";
             document.loginForm.submit();
         }
+        function join(){
+            document.loginForm2.method = "POST";
+            document.loginForm2.action = "/join.do";
+            document.loginForm2.submit();
+        }
     </script>
 </head>
 <body>
@@ -16,6 +21,14 @@
         <input name = "usrId">
         <input name = "usrPw">
         <button onclick="test();">test</button>
+    </form>
+    <form id = "loginForm2" name="loginForm2">
+        <input name = "usrId">
+        <input name = "usrPw">
+        <input name = "usrNickname">
+        <input name = "usrName">
+        <input name = "usrAdrs">
+        <button onclick="join();">join</button>
     </form>
 </body>
 </html>
