test 추가 및 이름 변경

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-TEST CODE
+<h1> File Upload </h1>
+<form method="post" action="/upload" enctype="multipart/form-data">
+    <input type="file" name="uploadfile" multiple="multiple">
+    <input type="submit">
+</form>
 
 </body>
 </html>
