--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
 <h1> File Upload </h1>
 <form method="post" action="/upload" enctype="multipart/form-data">
     <input type="file" name="uploadfile" multiple="multiple">
+    <input type="text" name="exhibTitle">
     <input type="submit">
 </form>
 
